# LiteCode

./: .gitignore  Cargo.toml  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
docs/: ADD.md  PRD.md  tools.json
src/: cli.rs  error.rs  lib.rs  main.rs  server.rs
src/schema/: mod.rs
src/services/: file_service.rs  mod.rs  process.rs  task_manager.rs
src/tools/: bash.rs  edit.rs  glob.rs  grep.rs  mod.rs  notebook.rs  read.rs  task_output.rs  task_stop.rs  write.rs
src/transport/: http.rs  stdio.rs
