[package]
name = "litecode"
version = "0.1.1"
edition = "2024"
authors = ["orange"]
description = "An ultra-lightweight Coding MCP server built with Rust"
repository = "https://github.com/mirrorange/LiteCode"
homepage = "https://github.com/mirrorange/LiteCode"
license = "MIT"
readme = "README.md"
keywords = ["mcp", "coding", "llm", "tools", "server"]
categories = ["development-tools", "command-line-utilities"]
exclude = [
    ".github/",
    "docs/",
    "playground/",
    "target/",
    "AGENTS.md",
]

[dependencies]
axum = "0.8.8"
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
globwalk = "0.9.1"
grep = "0.4.1"
grep-regex = "0.1.14"
grep-searcher = "0.1.16"
ignore = "0.4.25"
lopdf = "0.40.0"
regex = "1.12.3"
rmcp = { version = "1.2.0", features = ["transport-io", "transport-streamable-http-server"] }
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "fs", "process", "signal", "io-util", "sync", "time"] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[dev-dependencies]
tempfile = "3.27.0"
